DigicielFull/force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Mega</fullName>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>