DigicielFull/force-app/main/default/objects/Account/fields/Account_Lead_GSM_ICT__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead_GSM_ICT__c</fullName>
    <label>Account Lead GSM/ICT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>