DigicielFull/force-app/main/default/objects/Account/fields/AccountHierarchyLevel__c.field-meta.xml
<CustomField>
    <fullName>AccountHierarchyLevel__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), 6, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), 5, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), 4, 
IF(NOT(ISBLANK(Parent.Parent.Name)), 3, 
IF(NOT(ISBLANK(Parent.Name)),2, 
1)))))</formula>
    <inlineHelpText>This field notes the accounts current position in the Account Hierarrchy, for example;

1 = Ultimate Parent
2 = Child Account
3 = Grandchild  Account etc</inlineHelpText>
    <label>Account Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>