DigicielFull/force-app/main/default/objects/Account/fields/AccountUniqueID__c.field-meta.xml
<CustomField>
    <fullName>AccountUniqueID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Account Unique ID</label>
    <type>Text</type>
</CustomField>