DigicielFull/force-app/main/default/objects/Account/fields/Actual_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pipeline__c</fullName>
    <label>Actual Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>