DigicielFull/force-app/main/default/objects/Account/fields/Additional_Add_on_Packages__c.field-meta.xml
<CustomField>
    <fullName>Additional_Add_on_Packages__c</fullName>
    <label>Additional Add on Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Movie Package</fullName>
            </value>
            <value>
                <fullName>Sports Pack</fullName>
            </value>
            <value>
                <fullName>Sports Max Pack</fullName>
            </value>
            <value>
                <fullName>Adult Service</fullName>
            </value>
            <value>
                <fullName>HD Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>