DigicielFull/force-app/main/default/objects/Account/fields/Additional_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_information__c</fullName>
    <label>Additional information</label>
    <type>TextArea</type>
</CustomField>