DigicielFull/force-app/main/default/objects/Account/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Adresse de l&apos;établissement</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>