DigicielFull/force-app/main/default/objects/Account/fields/AnnualMRC__c.field-meta.xml
<CustomField>
    <fullName>AnnualMRC__c</fullName>
    <label>Annual MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>