DigicielFull/force-app/main/default/objects/Account/fields/are_you_a_current_Customer__c.field-meta.xml
<CustomField>
    <fullName>are_you_a_current_Customer__c</fullName>
    <label>Are you a current Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>