DigicielFull/force-app/main/default/objects/Account/fields/AutoFilling__c.field-meta.xml
<CustomField>
    <fullName>AutoFilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remplissage automatique</label>
    <type>Checkbox</type>
</CustomField>