DigicielFull/force-app/main/default/objects/Account/fields/AvanceOrder__c.field-meta.xml
<CustomField>
    <fullName>AvanceOrder__c</fullName>
    <label>% Avance à la commande</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Specialterms__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10 %</fullName>
            </value>
            <value>
                <fullName>30 %</fullName>
            </value>
            <value>
                <fullName>50 %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>