DigicielFull/force-app/main/default/objects/Account/fields/Average_Monthly_Supplier_Spend__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Supplier_Spend__c</fullName>
    <label>Average Monthly Supplier Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>