DigicielFull/force-app/main/default/objects/Account/fields/Backlog_Total_Account__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Total_Account__c</fullName>
    <label>Backlog Total (Account)</label>
    <summarizedField>Backlog__c.Backlog_Currency__c</summarizedField>
    <summaryFilterItems>
        <field>Backlog__c.Current_Month__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Backlog__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>