DigicielFull/force-app/main/default/objects/Account/fields/Ban_Number__c.field-meta.xml
<CustomField>
    <fullName>Ban_Number__c</fullName>
    <label>Ban Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>