DigicielFull/force-app/main/default/objects/Account/fields/Bill_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Bill_Delivery__c</fullName>
    <label>Bill Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Printed Bill</fullName>
            </value>
            <value>
                <fullName>Online Bill View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>