DigicielFull/force-app/main/default/objects/Account/fields/Bill_Payment_SMS_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Bill_Payment_SMS_Reminder__c</fullName>
    <label>Bill Payment SMS Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>