DigicielFull/force-app/main/default/objects/Account/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Billing Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua &amp; Barbuda</fullName>
                <label>Antigua and Barbuda</label>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Bonaire</fullName>
            </value>
            <value>
                <fullName>Virgin Islands, British</fullName>
                <label>BVI</label>
            </value>
            <value>
                <fullName>Cayman Islands</fullName>
            </value>
            <value>
                <fullName>Curacao</fullName>
            </value>
            <value>
                <fullName>Dominica</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Fiji</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>French Guiana</fullName>
            </value>
            <value>
                <fullName>Grenada</fullName>
            </value>
            <value>
                <fullName>Guadeloupe</fullName>
            </value>
            <value>
                <fullName>Guyana</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>La Reunion</fullName>
            </value>
            <value>
                <fullName>Martinique</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
            <value>
                <fullName>Mayotte</fullName>
            </value>
            <value>
                <fullName>Montserrat</fullName>
            </value>
            <value>
                <fullName>Nauru</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Papua New Guinea</fullName>
            </value>
            <value>
                <fullName>Samoa</fullName>
            </value>
            <value>
                <fullName>St. Barthelemy</fullName>
            </value>
            <value>
                <fullName>St. Kitts and Nevis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>