DigicielFull/force-app/main/default/objects/Account/fields/Billing_Fax__c.field-meta.xml
<CustomField>
    <fullName>Billing_Fax__c</fullName>
    <formula>Billing_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Fax</label>
    <type>Text</type>
</CustomField>