DigicielFull/force-app/main/default/objects/Account/fields/Billing_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Telephone__c</fullName>
    <formula>Billing_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Telephone</label>
    <type>Text</type>
</CustomField>