DigicielFull/force-app/main/default/objects/Account/fields/Broadband_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Equipment__c</fullName>
    <label>Broadband Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modem</fullName>
            </value>
            <value>
                <fullName>Wifi-Modem</fullName>
            </value>
            <value>
                <fullName>Wifi Router &amp; Modem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>