DigicielFull/force-app/main/default/objects/Account/fields/Ceritficte_of_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Ceritficte_of_Compliance__c</fullName>
    <label>Certificate of Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>