DigicielFull/force-app/main/default/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City- Not in Use</label>
    <length>20</length>
    <type>Text</type>
</CustomField>