DigicielFull/force-app/main/default/objects/Account/fields/Client_Marketing_Calendar_Planner__c.field-meta.xml
<CustomField>
    <fullName>Client_Marketing_Calendar_Planner__c</fullName>
    <label>Client Marketing Calendar Planner</label>
    <type>TextArea</type>
</CustomField>