DigicielFull/force-app/main/default/objects/Account/fields/ClientIdKaldom__c.field-meta.xml
<CustomField>
    <fullName>ClientIdKaldom__c</fullName>
    <label>Client Id kaldom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>