DigicielFull/force-app/main/default/objects/Account/fields/ClientIdSingleView__c.field-meta.xml
<CustomField>
    <fullName>ClientIdSingleView__c</fullName>
    <label>Client Id single view</label>
    <length>255</length>
    <type>Text</type>
</CustomField>