DigicielFull/force-app/main/default/objects/Account/fields/ClientIdTelesoft__c.field-meta.xml
<CustomField>
    <fullName>ClientIdTelesoft__c</fullName>
    <label>Client Id telesoft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>