DigicielFull/force-app/main/default/objects/Account/fields/Comments_Business_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Comments_Business_Analysis__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>