DigicielFull/force-app/main/default/objects/Account/fields/CompanyEmail_textarea__c.field-meta.xml
<CustomField>
    <fullName>CompanyEmail_textarea__c</fullName>
    <label>CompanyEmail</label>
    <type>TextArea</type>
</CustomField>