DigicielFull/force-app/main/default/objects/Account/fields/Competitor_1_Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1_Potential_Revenue__c</fullName>
    <description>Relates to Field Competitor_1__c</description>
    <inlineHelpText>This is in relation to Competitor 1. Please enter the revenue amount for Competitor 1.</inlineHelpText>
    <label>Competitor 1 Potential Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>