DigicielFull/force-app/main/default/objects/Account/fields/Competitor_2__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2__c</fullName>
    <label>Competitor 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>