DigicielFull/force-app/main/default/objects/Account/fields/Competitor_2_Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_Potential_Revenue__c</fullName>
    <description>Relates to Field Competitor_2__c</description>
    <inlineHelpText>This is in relation to Competitor 2. Please enter the revenue amount for Competitor 2.</inlineHelpText>
    <label>Competitor 2 Potential Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>