DigicielFull/force-app/main/default/objects/Account/fields/Competitor_2_Service_Provided__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_Service_Provided__c</fullName>
    <label>Competitor 2 Service Provided</label>
    <length>150</length>
    <type>Text</type>
</CustomField>