DigicielFull/force-app/main/default/objects/Account/fields/ContractsReviewed__c.field-meta.xml
<CustomField>
    <fullName>ContractsReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracts Reviewed</label>
    <type>Checkbox</type>
</CustomField>