DigicielFull/force-app/main/default/objects/Account/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <label>Country_of_Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>not valid will use the country_c field instead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>