DigicielFull/force-app/main/default/objects/Account/fields/Createdby_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>Createdby_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Createdby_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts (Createdby_MIGRATION)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>