DigicielFull/force-app/main/default/objects/Account/fields/CreatedDate_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_MIGRATION__c</fullName>
    <label>CreatedDate_MIGRATION</label>
    <type>DateTime</type>
</CustomField>