DigicielFull/force-app/main/default/objects/Account/fields/Credit_Limit_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Assigned__c</fullName>
    <label>Credit Limit Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>