DigicielFull/force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>SOHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>