DigicielFull/force-app/main/default/objects/Account/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <inlineHelpText>New: Customers who have no services with Digicel should be tagged as &quot;Prospect&quot;

New: Customers who have had services with Digicel for less than 3 months should be tagged as &quot;New Customer&quot;

Existing: Customers who have had services with Digicel for more than 3 months should be tagged as &quot;Exisitng Customer&quot;

Winback: Customer has services which we have won from a competitor</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>