DigicielFull/force-app/main/default/objects/Account/fields/Deposits_Waived__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposits Waived?</label>
    <type>Checkbox</type>
</CustomField>