DigicielFull/force-app/main/default/objects/Account/fields/Digicel_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Account_Number__c</fullName>
    <label>Digicel Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>