DigicielFull/force-app/main/default/objects/Account/fields/DSO__c.field-meta.xml
<CustomField>
    <fullName>DSO__c</fullName>
    <label>DSO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>