DigicielFull/force-app/main/default/objects/Account/fields/EndContractDeadline__c.field-meta.xml
<CustomField>
    <fullName>EndContractDeadline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EndContractDeadline</label>
    <type>Checkbox</type>
</CustomField>