DigicielFull/force-app/main/default/objects/Account/fields/Estimated_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Value__c</fullName>
    <label>Estimated Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>