DigicielFull/force-app/main/default/objects/Account/fields/Fibre_BDE__c.field-meta.xml
<CustomField>
    <fullName>Fibre_BDE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fibre BDE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Digicel_Country__c</field>
            <operation>equals</operation>
            <value>Trinidad and Tobago</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>