DigicielFull/force-app/main/default/objects/Account/fields/Fibre_Zone__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Zone__c</fullName>
    <label>Fibre Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fibre Zone 1-Port of Spain</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 2-Laventille/Barataria</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 3- Chaguanas Town Centre</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 4-Curepe/Tunapuna</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 5-Frederick Settlement</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 6-Cunupia</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 7-Piarco South</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 9-Golden Grove Road</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 10-Diego Martin</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 11-Diamond Vale</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 12-West moorings</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 13 -ANSA POLYMAR</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 14 -ANSA POS</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 15 -ARIMA SOUTH</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 16 -AROUCA</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 17 -CHAGUANAS CHIN CHIN</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 18 -CHAGUANAS MONTROSE</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 19 -CHAGUANAS SWITCH</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 20 -CROWN POINT TOBAGO</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 21 -D&apos;ABADIE</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 22 -DIBE</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 23 -EL SOCORO</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 24 -GENCOE WASA</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 25 -GRENADIAN HILL</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 26 -LAVENTILLE</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 27 -LESS EFFORT</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 28 -MACOYA</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 29 -MORVANT WASA</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 30 -OROPOUCHE DOW VILLAGE</fullName>
            </value>
            <value>
                <fullName>FTTH Zone 31 -PASEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>